--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@geckos.io/server": "^1.4.3",
     "enable3d": "^0.18.0",
     "express": "^4.17.1",
+    "http": "0.0.1-security",
     "nan": "^2.14.2",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0"
